@@ -1,3 +1,9 @@
+2023-11-26 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Fully enable code speed optimization for z80 (and related).
+
 2023-11-25 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/gen.c:
